--- a/style.css
+++ b/style.css
@@ -7,24 +7,24 @@
 #slideContainer {
     justify-content: space-between;
     display: flex;
-    width: 800px;
-    height: 400px;
+    width: 80vw;
+    height: 80vh;
     border: solid black 1px;
-    margin: 20vh auto;
+    margin: 5vh auto;
     border-radius: 10px;
 }
 
 .containerImg {
     position: absolute;
     display: flex;
-    width: 800px;
-    height: 400px;
+    width: 80vw;
+    height: 80vh;
     overflow: hidden;
 }
 
 .item {
-    width: 800px;
-    height: 400px;
+    width: 80vw;
+    height: 80vh;
     border-radius: 10px;
     transition: all 1s;
 }
@@ -34,8 +34,8 @@
 }
 
 .item img {
-    width: 800px;
-    height: 400px;
+    width: 80vw;
+    height: 80vh;
     border-radius: 10px;
 }
 
@@ -56,4 +56,32 @@
     border-radius: 10px;
     cursor: pointer;
     transition: all 1s;
+}
+
+#lista {
+    width: 400px;
+    height: 70px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.guideList {
+    list-style-position: inside;
+    list-style-type: none;
+    float: left;
+    width: 30px;
+    height: 30px;
+    font-size: 24px;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    text-align: center;
+    margin-left: 10px;
+}
+
+#menuSelecionado {
+    background-color: aqua;
+    border: solid black 1px;
 }
